add nginx config

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
 processes = 1
 socket = /tmp/f1l3.uwsgi.sock
-plugins =  cgi
+chmod-socket = 666
+plugins = cgi
 
 ; bind on port 8080 and use the modifier 9
 http = :8080
