add text file detection

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -4,12 +4,13 @@ socket = /tmp/f1l3.uwsgi.sock
 chmod-socket = 666
 plugins = cgi
 
-; bind on port 8080 and use the modifier 9
-http = :8080
+; use the modifier 9
 http-modifier1 = 9
 
 ; this is where you put the code
 doc_root = /var/www/f1l3
+
+chdir = %(doc_root)
 
 ; run cgi (ending in .cgi) in the document_root
 cgi = %(doc_root)
