--- a/config/f.0u0.fun.conf
+++ b/config/f.0u0.fun.conf
@@ -7,7 +7,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name 192.168.2.110; # substitute your machine's IP address or FQDN
+    server_name f.0u0.fun; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
