--- a/config/f.0u0.fun.conf
+++ b/config/f.0u0.fun.conf
@@ -7,11 +7,11 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name f.0u0.fun; # substitute your machine's IP address or FQDN
+    server_name f1l3.ofnir.xyz; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
-    client_max_body_size 100M;   # adjust to taste
+    client_max_body_size 100M; 
 
     # files
     location /files  {
